@@ -568,6 +568,7 @@ modules/extfs/lha
 modules/extfs/rar
 modules/extfs/zip
 modules/extfs/zoo
+monikers/Makefile
 man/Makefile
 man/gnome-vfs-mime.5
 devel-docs/Makefile
